--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
-  "version": 2,
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+  "rewrites": [
+      { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "headers": [
+      {
+          "source": "/(.*).js",
+          "headers": [
+              { "key": "Content-Type", "value": "application/javascript" }
+          ]
+      }
   ]
 }
